--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rsapp-task-template",
   "version": "1.0.0",
   "description": "Template for rsapp task",
-  "main": "index.js",
+  "main": "myTest.js",
   "scripts": {
     "test": "mocha test",
     "postinstall": "node postinstall.js"
@@ -24,6 +24,10 @@
     "chai": "^4.2.0",
     "colors": "^1.4.0",
     "mocha": "^6.2.2",
-    "semver": "^6.3.0"
+    "number": "0.0.1",
+    "number-to-words": "^1.2.4",
+    "semver": "^6.3.0",
+    "to": "^0.2.9",
+    "words": "^0.1.4"
   }
 }
