refactor: remove ternary operators

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rsapp-task-template",
   "version": "1.0.0",
   "description": "Template for rsapp task",
-  "main": "myTest.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha test",
     "postinstall": "node postinstall.js"
