--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "node postinstall.js"
   },
   "engines": {
-    "node": "<=12"
+    "node": ">=12"
   },
   "repository": {
     "type": "git",
